--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,15 @@
 ---
-
+import Timer from "../components/Timer.tsx"
+import MainLayout from "../layouts/MainLayout.astro";
+import '../styles/landing.css';
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<MainLayout>
+	<section id="hero" class="min-h-screen flex  items-center justify-center">
+		<div class="container">
+			<div id="hero-text">
+				<h1 class="text-white text-7xl text-center font-bold mb-8">COMING SOON!</h1>
+				<Timer client:only="react"/>
+			</div>
+		</div>
+	</section>
+</MainLayout>
