fix: remove duplicate semicolons

--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -1,5 +1,5 @@
 #hero {
-    animation: gradient 15s ease infinite;;
+    animation: gradient 15s ease infinite;
     background: linear-gradient(
         45deg, 
         rgb(var(--color-primary-lighter) / 0.2) 10%,
