--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,8 +1,8 @@
 ---
-import Header from "../components/Header/Header.astro"
-import Footer from "../components/Footer.astro"
-import '../styles/tailwind.css';
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header/Header.astro";
 import '../styles/global.css';
+import '../styles/tailwind.css';
 ---
 <html lang="en" class="dark">
 	<head>
@@ -10,7 +10,7 @@ import '../styles/global.css';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>IDWS</title>
+		<title>IDSW</title>
 	</head>
 	<body class="">
         <Header/>
