--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Timer from "../components/Timer.tsx"
+import Timer from "../components/Timer.tsx";
 import MainLayout from "../layouts/MainLayout.astro";
 import '../styles/landing.css';
 ---
