feat: apply to be a speaker button

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -13,7 +13,7 @@ import '../styles/tailwind.css';
 		<title>IDSW</title>
 	</head>
 	<body class="">
-        <Header/>
+        <!-- <Header/> -->
         <main>
             <slot/>
         </main>
