--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -7,4 +7,14 @@
         --color-dark: 8 7 22;
         --color-text: 255 255 255;
     }
+
+    .bg-glass {
+        background: linear-gradient(45deg, rgba(255 255 255 / .05), rgba(255 255 255 / .2));
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
+    }
+
+    .bg-glass-bright {
+        background: linear-gradient(45deg, rgba(255 255 255 / .2), rgba(255 255 255 / .3));
+    }
 }
