--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,12 @@ import '../styles/landing.css';
 	<section id="hero" class="min-h-screen flex  items-center justify-center">
 		<div class="container">
 			<div id="hero-text">
-				<h1 class="text-white text-7xl text-center font-bold mb-8 max-w-[1000px] mx-auto w-full">Indonesia Software Developer Conference 2024</h1>
+				<h1 class="text-white text-4xl md:text-7xl text-center font-bold mb-14 max-w-[1000px] mx-auto w-full">Indonesia Software Developer Conference 2024</h1>
 				<Timer client:only="react"/>
 				<h2 class="text-body text-3xl text-white text-center font-thin text-opacity-80 mb-16">(COMING SOON)</h2>
-				<div class="buttons flex justify-center">
-					<Button color="glass"> Apply to be a speaker</Button>
+				<div class="buttons flex justify-center gap-5">
+					<Button color="glass">Apply to be a speaker</Button>
+					<Button color="outline">More Info</Button>
 				</div>
 			</div>
 		</div>
