--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -1,22 +1,34 @@
 #hero {
-    animation: gradient 15s ease infinite;
-    background: linear-gradient(
-        45deg, 
-        rgb(var(--color-primary-lighter) / 0.2) 10%,
-        rgb(var(--color-dark) / 1) 30%,
-        rgb(var(--color-primary-lighter) / 0.2) 50%
+  animation: gradient 15s ease infinite;
+  background: radial-gradient(
+      circle at center,
+      rgb(var(--color-primary-lighter) / 0.08) 0,
+      rgb(var(--color-primary-lighter) / 0.02),
+      transparent 800px
+    ),
+    linear-gradient(
+      45deg,
+      rgb(var(--color-primary-light) / 0.2) 0%,
+      rgb(var(--color-primary-light) / 0.2) 5%,
+      rgb(var(--color-primary-lighter) / 0.2) 5%,
+      rgb(var(--color-primary-lighter) / 0.2) 10%,
+      rgb(var(--color-dark) / 1) 10%,
+      rgb(var(--color-dark) / 1) 90%,
+      rgb(var(--color-primary-lighter) / 0.2) 90%,
+      rgb(var(--color-primary-lighter) / 0.2) 95%,
+      rgb(var(--color-primary-light) / 0.2) 95%
     );
-    background-size: 400% 400%
+  /* background-size: 400% 400% */
 }
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
