chore: update link apply to be a speaker

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import '../styles/landing.css';
 				<Timer client:only="react"/>
 				<h2 class="text-body text-3xl text-white text-center font-thin text-opacity-80 mb-16">(COMING SOON)</h2>
 				<div class="buttons flex justify-center gap-5">
-					<Button color="glass">Apply to be a speaker</Button>
+					<Button color="glass" href="https://www.papercall.io/idsw-2024">Apply to be a speaker</Button>
 					<Button color="outline">More Info</Button>
 				</div>
 			</div>
