--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,32 @@
 ---
-import Timer from "../components/Timer.tsx"
-import Button from "../components/Button/Button.tsx"
+import Timer from "../components/Timer.tsx";
+import Button from "../components/Button/Button.tsx";
 import MainLayout from "../layouts/MainLayout.astro";
-import '../styles/landing.css';
+import "../styles/landing.css";
 ---
+
 <MainLayout>
-	<section id="hero" class="min-h-screen flex  items-center justify-center">
-		<div class="container">
-			<div id="hero-text">
-				<h1 class="text-white text-4xl md:text-7xl text-center font-bold mb-14 max-w-[1000px] mx-auto w-full">Indonesia Software Developer Conference 2024</h1>
-				<Timer client:only="react"/>
-				<h2 class="text-body text-3xl text-white text-center font-thin text-opacity-80 mb-16">(COMING SOON)</h2>
-				<div class="buttons flex justify-center gap-5">
-					<Button color="glass" href="https://www.papercall.io/idsw-2024">Apply to be a speaker</Button>
-					<Button color="outline">More Info</Button>
-				</div>
-			</div>
-		</div>
-	</section>
+  <section id="hero" class="min-h-screen flex items-center justify-center">
+    <div class="container">
+      <div id="hero-text">
+        <h1
+          class="text-white text-4xl md:text-7xl text-center font-bold mb-14 max-w-[1000px] mx-auto w-full"
+        >
+          Indonesia Software Developer Conference 2024
+        </h1>
+        <Timer client:only="react" />
+        <h2
+          class="text-body text-3xl text-white text-center font-thin text-opacity-80 mb-16"
+        >
+          (COMING SOON)
+        </h2>
+        <div class="buttons flex justify-center gap-5">
+          <Button color="glass" href="https://www.papercall.io/idsw-2024"
+            >Apply to be a speaker</Button
+          >
+          <Button color="outline">More Info</Button>
+        </div>
+      </div>
+    </div>
+  </section>
 </MainLayout>
