--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -2,30 +2,30 @@
 import Menu from "./Menu.astro";
 ---
 
-<header class="absolute w-full top-0 left-0 right-0">
+<header class="absolute left-0 right-0 top-0 w-full">
   <nav>
     <div
-      class="container flex flex-wrap items-center justify-between mx-auto p-4"
+      class="container mx-auto flex flex-wrap items-center justify-between p-4"
     >
       <a
         href="https://flowbite.com/"
         class="flex items-center space-x-3 rtl:space-x-reverse"
       >
         <span
-          class="self-center text-2xl font-semibold whitespace-nowrap text-white"
+          class="self-center whitespace-nowrap text-2xl font-semibold text-white"
           >IDSW</span
         >
       </a>
       <button
         data-collapse-toggle="navbar-default"
         type="button"
-        class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+        class="inline-flex h-10 w-10 items-center justify-center rounded-lg p-2 text-sm text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600 md:hidden"
         aria-controls="navbar-default"
         aria-expanded="false"
       >
         <span class="sr-only">Open main menu</span>
         <svg
-          class="w-5 h-5"
+          class="h-5 w-5"
           aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
