--- a/src/components/Header/Menu.astro
+++ b/src/components/Header/Menu.astro
@@ -3,7 +3,7 @@ const menus = ["Event", "Speakers", "Partners"];
 ---
 
 <ul
-  class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:border-gray-700"
+  class="mt-4 flex flex-col rounded-lg border border-gray-100 p-4 font-medium dark:border-gray-700 md:mt-0 md:flex-row md:space-x-8 md:border-0 md:p-0 rtl:space-x-reverse"
 >
   {
     menus.map((menu) => (
