--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -4,9 +4,7 @@ import Menu from "./Menu.astro";
 
 <header class="absolute left-0 right-0 top-0 w-full">
   <nav>
-    <div
-      class="container mx-auto flex flex-wrap items-center justify-between p-4"
-    >
+    <div class="container flex flex-wrap items-center justify-between p-4">
       <a
         href="https://flowbite.com/"
         class="flex items-center space-x-3 rtl:space-x-reverse"
