--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,31 +1,45 @@
 ---
-import Timer from "../components/Timer.tsx";
-import Button from "../components/Button/Button.tsx";
+import Button from "../components/Button/Button";
+import Timer from "../components/Timer";
 import MainLayout from "../layouts/MainLayout.astro";
 import "../styles/landing.css";
+
+const eventDate = new Date(2024, 11, 17, 9, 0, 0);
 ---
 
 <MainLayout>
-  <section id="hero" class="min-h-screen flex items-center justify-center">
-    <div class="container">
-      <div id="hero-text">
-        <h1
-          class="text-white text-4xl md:text-7xl text-center font-bold mb-14 max-w-[1000px] mx-auto w-full"
+  <section id="hero" class="flex min-h-dvh items-center justify-center">
+    <div class="container mx-auto flex flex-col items-center gap-8">
+      <div class="flex flex-col items-center gap-4 text-center">
+        <span
+          class="rounded-full border border-white/40 bg-white/10 px-4 py-2 text-sm text-white/80"
+          >16-17th November, 2024 • Jakarta, ID</span
         >
+        <h1 class="text-center text-4xl font-semibold text-white">
           Indonesia Software Developer Conference 2024
         </h1>
-        <Timer client:only="react" />
-        <h2
-          class="text-body text-3xl text-white text-center font-thin text-opacity-80 mb-16"
-        >
-          (COMING SOON)
-        </h2>
-        <div class="buttons flex justify-center gap-5">
-          <Button color="glass" href="https://www.papercall.io/idsw-2024"
-            >Apply to be a speaker</Button
+      </div>
+      <div class="flex flex-col gap-4">
+        <Timer client:only="react" date={eventDate} />
+        <div class="flex items-center justify-center gap-2 text-gray-300">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="18"
+            height="18"
+            viewBox="0 0 24 24"
+            ><path
+              fill="currentColor"
+              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8s8 3.58 8 8s-3.58 8-8 8m-.22-13h-.06c-.4 0-.72.32-.72.72v4.72c0 .35.18.68.49.86l4.15 2.49c.34.2.78.1.98-.24a.71.71 0 0 0-.25-.99l-3.87-2.3V7.72c0-.4-.32-.72-.72-.72"
+            ></path></svg
           >
-          <Button color="outline">More Info</Button>
+          <h2 class="text-sm uppercase">Left until the event starts</h2>
         </div>
+      </div>
+      <div class="buttons flex justify-center gap-5">
+        <a href="https://www.papercall.io/idsw-2024" target="_blank"
+          ><Button color="glass">Apply to be a speaker</Button></a
+        >
+        <Button color="outline">More Info</Button>
       </div>
     </div>
   </section>
