feat: add body color

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,6 @@
 ---
 
 ---
-
-<footer>
-  <div>Copyright &copy; 2024 IDSW</div>
+<footer class="text-center p-3">
+    <div>Copyright &copy; 2024 IDSW</div>
 </footer>
