feat: hero section and faq

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,5 @@
 ---
-import "@fontsource/inter";
+import "@fontsource-variable/inter";
 import PostHog from "../components/posthog.astro";
 import "../styles/global.css";
 import "../styles/tailwind.css";
