--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const faqData: Faq[] = Object.values(faq).map(
   <section id="hero" class="flex">
     <div class="flex flex-wrap">
       <div
-        class="hero-left flex flex-grow items-end gap-10 px-16 py-24 lg:block lg:w-1/3"
+        class="hero-left flex flex-grow flex-wrap items-end gap-10 px-8 py-24 lg:block lg:w-1/3 lg:px-16"
       >
         <img src="/logo.svg" alt="" class="w-80 lg:mb-8" />
         <div class="hero-text">
@@ -29,38 +29,36 @@ const faqData: Faq[] = Object.values(faq).map(
         </div>
       </div>
       <div
-        class="hero-right max-w-[913px] flex-col bg-primary-dark px-8 py-24 text-white lg:w-2/3 lg:px-16"
+        class="hero-right w-full flex-col bg-primary-dark px-8 py-24 text-white lg:w-2/3 lg:max-w-[913px] lg:px-16"
       >
-        <div class="container">
-          <div
-            class="timer-area mb-12 flex items-center justify-center rounded-lg px-10 py-12 lg:py-24"
-          >
-            <Timer
-              client:only="react"
-              date={eventDate}
-              className="text-xl md:gap-5 md:text-xl xl:gap-10 xl:text-2xl"
-            />
-          </div>
-          <div class="flex flex-col gap-5 lg:flex-row">
-            <p class="w-full text-balance text-[22px] font-light lg:w-2/3">
-              Join us for the first annual conference for Indonesia software
-              developers, where you can hear thought-provoking keynotes from
-              industry leaders and network with fellow developers.
-            </p>
-            <div class="flex flex-grow flex-col py-5">
-              <Button color="primary" className="flex-grow xl:text-2xl">
-                Get Tickets
-              </Button>
-            </div>
+        <div
+          class="timer-area mb-12 flex items-center justify-center rounded-lg px-10 py-12 lg:py-24"
+        >
+          <Timer
+            client:only="react"
+            date={eventDate}
+            className="text-xl md:gap-5 md:text-xl xl:gap-10 xl:text-2xl"
+          />
+        </div>
+        <div class="flex flex-col gap-5 lg:flex-row">
+          <p class="w-full text-balance text-[22px] font-light lg:w-2/3">
+            Join us for the first annual conference for Indonesia software
+            developers, where you can hear thought-provoking keynotes from
+            industry leaders and network with fellow developers.
+          </p>
+          <div class="flex flex-grow flex-col py-5">
+            <Button color="primary" className="flex-grow xl:text-2xl">
+              Get Tickets
+            </Button>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <section id="faq" class="flex">
-    <div class="flex w-full flex-wrap md:flex-nowrap">
+  <section id="faq" class="flex w-full">
+    <div class="flex w-full flex-wrap lg:flex-nowrap">
       <div
-        class="faq-left flex items-end bg-primary-dark px-16 py-24 lg:block lg:w-1/3 lg:min-w-[610px]"
+        class="faq-left flex w-full items-end bg-primary-dark px-8 py-24 lg:block lg:w-1/3 lg:min-w-[610px] lg:px-16"
       >
         <div class="faq-text text-white">
           <h1 class="mb-3 text-3xl font-bold md:text-4xl">
