--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ const faqData: Faq[] = Object.values(faq).map(
 ---
 
 <MainLayout>
-  <section id="hero" class="flex">
+  <section id="hero">
     <div class="flex flex-wrap">
       <div
         class="hero-left flex flex-grow flex-wrap items-end gap-10 px-8 py-24 lg:block lg:w-1/3 lg:px-16"
