--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,16 @@ import Button from "../components/Button/Button";
 import Timer from "../components/Timer";
 import Accordion from "../components/Accordion";
 import MainLayout from "../layouts/MainLayout.astro";
-import "../styles/landing.css";
 import type { Faq } from "../@types/faq";
+import type { Agenda } from "../@types/agenda";
+import "../styles/landing.css";
+import EventCard from "../components/EventCard.astro";
 const eventDate = new Date(2024, 10, 17, 9, 0, 0);
 const faq = import.meta.glob("../data/faq.json", { eager: true });
+const agenda = import.meta.glob("../data/agenda.json", { eager: true });
 
 const faqData: Faq[] = Object.values(faq).map((item) => (item as any).default)[0];
+const agendaData: Agenda[] = Object.values(agenda).map((item) => (item as any).default)[0];
 ---
 
 <MainLayout>
@@ -48,6 +52,7 @@ const faqData: Faq[] = Object.values(faq).map((item) => (item as any).default)[0
       </div>
     </div>
   </section>
+
   <section id="about" class="bg-gradient-to-b from-[#030E1C] to-[#061C3C] text-white">
     <div class="container">
       <div class="grid grid-cols-12">
@@ -65,23 +70,45 @@ const faqData: Faq[] = Object.values(faq).map((item) => (item as any).default)[0
       </div>
     </div>
   </section>
-</MainLayout>
-<section id="faq" class="">
-  <div class="container">
-    <div class="gap-100 grid grid-cols-12">
-      <div class="faq-left relative col-span-12 items-end py-24 pr-8 lg:col-span-4 lg:block">
-        <div class="bg-to-start bg-primary-dark"></div>
-        <div class="faq-text text-white">
-          <h1 class="mb-3 text-3xl font-bold md:text-4xl">Frequently Asked Questions</h1>
-          <p class="text-xl text-gray-400">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id semper turpis. Sed sit amet libero.
-          </p>
+  <section id="agenda" class="bg-gradient-to-br from-[#0A2B5B] to-[#22406B]">
+    <div class="container">
+      <div class="gap-100 grid grid-cols-12">
+        <div class="agenda-left relative col-span-12 items-end py-24 pb-0 lg:col-span-3 lg:block">
+          <div class="bg-to-start bg-primary-dark"></div>
+          <div class="agenda-text text-white">
+            <h1 class="mb-12 text-3xl font-bold lg:text-7xl">Event Agenda</h1>
+            <div class="flex flex-col gap-5 text-left">
+              <button class="w-full bg-[#1C7AFF] p-5 text-left text-2xl font-bold">First Day</button>
+              <button class="w-full bg-gradient-to-r from-[#A5CAFF22] to-[#28467055] p-5 text-left text-2xl font-bold">
+                Second Day
+              </button>
+            </div>
+          </div>
+        </div>
+        <div
+          class="agenda-right relative col-span-12 grid flex-shrink grid-cols-subgrid flex-col py-24 lg:col-span-8 lg:col-start-5">
+          {agendaData.map((agenda) => <EventCard data={agenda} />)}
         </div>
       </div>
-      <div class="faq-right relative col-span-12 flex-shrink flex-col px-8 py-24 lg:col-span-8 lg:px-16">
-        <div class="bg-to-end bg-[#E7F1FF]"></div>
-        <Accordion data={faqData} client:load />
+    </div>
+  </section>
+  <section id="faq" class="">
+    <div class="container">
+      <div class="gap-100 grid grid-cols-12">
+        <div class="faq-left relative col-span-12 items-end py-24 pr-8 lg:col-span-4 lg:block">
+          <div class="bg-to-start bg-primary-dark"></div>
+          <div class="faq-text text-white">
+            <h1 class="mb-3 text-3xl font-bold md:text-4xl">Frequently Asked Questions</h1>
+            <p class="text-xl text-gray-400">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id semper turpis. Sed sit amet libero.
+            </p>
+          </div>
+        </div>
+        <div class="faq-right relative col-span-12 flex-shrink flex-col px-8 py-24 lg:col-span-8 lg:px-16">
+          <div class="bg-to-end bg-[#E7F1FF]"></div>
+          <Accordion data={faqData} client:load />
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+</MainLayout>
